# snek-framework

./: README.md  demo.py  index.html  makefile  style.css
.github/workflows/: deploy.yml
lib/playground-ui/: drag.js
lib/snek-core/: package.json  snek_core.d.ts  snek_core.js  snek_core_bg.wasm  snek_core_bg.wasm.d.ts
playground/: demo.py  index.html  style.css
snek-core/: .gitignore  Cargo.toml  LICENSE.md
snek-core/src/: lib.rs
snek-core/src/pylib/: snek.py
